# multinpainter-py

./: CHANGELOG.md  MANUAL_SETUP_INSTRUCTIONS.md  Makefile  PLAN.md  README.md  REFACTOR_FILELIST.txt  REFACTOR_SPLITTING.md  SETUP_SUMMARY.md  TODO.md  ci.yml.backup  llms.txt  pyproject.toml  setup.cfg  setup.py
docs/: conf.py
scripts/: build.sh  dev-setup.sh  release.sh  test.sh
src/multinpainter/: __init__.py  __main__.py  _version.py  core.py  detection_utils.py  image_utils.py  inpainting_core.py  models.py  multinpainter.py  prompt_utils.py  utils.py
tests/: conftest.py  test_multinpainter.py  test_utils.py
